# blab-chatbot-bot-client

./: .gitignore  .pre-commit-config.yaml  INSTALL.md  README.md  RUN.md  pyproject.toml  run.py
docs/: conf.py  index.rst  title.rst
docs/_static/: fix.js
src/blab_chatbot_bot_client/: __init__.py  __main__.py  cli.py  conversation.py  conversation_websocket.py  data_structures.py  settings_format.py
