[tool.poetry]
name = "blab-chatbot-bot-client"
version = "0.1.0"
description = ""
authors = ["C4AI"]
readme = "README.md"
packages = [{ include = "blab_chatbot_bot_client", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8,>=3.8.1"
overrides = "^7.3.1"
flask = { version = "^2.2.2", optional = true }
websocket-client = { version = "^1.1", optional = true }
waitress = { version = "^2.1.2", optional = true }
colorama = "^0.4.6"
types-waitress = "^2.1.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-annotations = "^3.0.0"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^23.2.13"
pyupgrade = "^3.3.1"
mypy = "^1.2.0"
pre-commit = "^3.0.4"
black = "^23.1.0"
ruff = "^0.0.261"
pydocstyle = "^6.2.2"

[tool.poetry.extras]
ws = ["flask", "websocket-client", "waitress"]



[tool.ruff]
select = ["F", "E", "W", "C90", "I", "N", "D", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B", "A", "C4", "T10", "DJ", "EM", "EXE", "ISC", "ICN", "ISC002", "ISC003", "ICN", "G", "INP", "PIE", "PYI", "PT", "Q", "RSE", "RET", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["ANN002", "ANN003", "ANN1", "ANN204", "ANN401", "ARG002", "A003", "D105", "D106", "D203", "D213", "D417", "DTZ", "I001", "TRY00"]

[tool.ruff.pydocstyle]
ignore-decorators = ["overrides.overrides"]
